--- a/Master/contact.html
+++ b/Master/contact.html
@@ -21,8 +21,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
+          <a id="alogo" href="index.html">  <img  class="img-fluid port-image" src="./assets/imgs/awalogo.png" alt="logo" width="150" height="150"></a>
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand" href="index.html" id="logo">Your Name</a>
+          <a class="navbar-brand" href="index.html" id="logo">Olweny Awa Francis</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
