--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright
+      <strong>&copy; Copyright 2020</strong> <br/>Olweny Awa Francis
     </p>
   </footer>
   <!-- End of footer -->
