--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text text-footer text-center">
-      <strong>&copy; Copyright 2020</strong>
+      <strong>&copy; Copyright 2020</strong><br/> Olweny Awa Francis
     </p>
   </footer>
   <!-- End of footer -->
