updated footer name

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
   <!-- Start of footer -->
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
-    <p class="text-muted text-muted-footer text-center">
+    <p class="text text-footer text-center">
       <strong>&copy; Copyright 2020</strong> <br/>Olweny Awa Francis
     </p>
   </footer>
