--- a/portfolio.html
+++ b/portfolio.html
@@ -83,8 +83,8 @@
   <!-- Start of footer -->
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
-    <p class="text-muted text-muted-footer text-center">
-      <strong>&copy; Copyright 2020</strong> Olweny Awa Francis
+    <p class="text text-footer text-center">
+      <strong>&copy; Copyright 2020</strong><br/> Olweny Awa Francis
     </p>
   </footer>
   <!-- End of footer -->
