updated article in index page

--- a/index.html
+++ b/index.html
@@ -61,19 +61,17 @@
             I grew up in Tororo, Uganda, in a family of Readers. As junior Laboratory Technician my career took me to India in my early thirties. 
             Olweny Francis Awa  is an IT  specialist with a decade of successful experience in developing websites and helping clients with computer issues.
 
-
-            
-            </p>
-          <br />
-          <p>EDUCATION
-            Full stack Developer University of Washington Seattle to-date.
-            Project Management University of Washington Tacoma 2017 USA.
-            Nursing Assistant Certification Washington USA.
-            BS in Computer Science | Kampala International University, Uganda , Kampala | 2013 World
-            Education Services (WES) evaluated for US equivalency.
-            Science Laboratory Technology SLT Kyambogo University 2007 Uganda.
-          </p>
-        </article>
+            </p>  
+          <br/>
+          <p><h4>EDUCATION </h4></p>
+          <p>Full stack Developer University of Washington Seattle to-date. </p>
+            <p> Project Management University of Washington Tacoma 2017 USA. </p>
+            <p> Nursing Assistant Certification Washington USA. </p>
+           <p> BS in Computer Science  Kampala International University Kampala, Uganda 2013; World
+            Education Services (WES) evaluated for US equivalency.</p>
+           <p> Science Laboratory Technology SLT Kyambogo University 2007 Uganda.</p>
+    
+          </article>
       </div>
     </section>
   </main>
