--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="resume.html">Resume</a>
+              </li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -47,7 +50,26 @@
         <!-- /.container -->
       </nav>
       <!-- End of navbar -->
+<!-- <div class="container">
 
+    <section id="main-bio">
+
+      <h2>Your Name</h2>
+
+      <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
+
+      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+    </section>
+
+    <section id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+    </section>
+  </div> -->
   <!-- Start of container -->
   <main class="container">
     <section class="row">
@@ -94,6 +116,7 @@
 
   <!-- Bootstrap CDN -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script></script>
+
 
 </body>
 
