--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 
   <title>Bootstrap Basic Portfolio</title>
 
+
   <!-- Boostrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <!-- Our own CSS stylesheet -->
@@ -40,6 +41,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="resume.html">Resume</a>
+              </li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -57,17 +61,25 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/india3.JPG" alt="india3" width="350" height="350">
+              <a href="https://francisawa.github.io/weather-Dashboard/" target="_blank">
+                <img class="img-fluid port-image" src="./assets/imgs/awacode.PNG" alt="india3" width="350" height="350">
+              </a>
+              </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <a href="https://lincguo93.github.io/Moodvie/" target="_blank">
+              <img class="img-fluid port-image" src="./assets/imgs/tecoders.PNG" alt="india" width="350" height="350">
+            </a>
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="./assets/imgs/awaindia.JPG" alt="india" width="350" height="350">
-            </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
+              <a href="file:///C:/BCS/course%20work/assignments/Portfolio/index.html" target="_blank">
               <img class="img-fluid port-image" src="./assets/imgs/awalogo.png" alt="logo" width="350" height="350">
+            </a>
             </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
-                <img class="img-fluid port-image" src="./assets/imgs/awaindia2.JPG" alt="awainindia2" width="350" height="350">
-                </div>
+                  <a href="file:///C:/BCS/course%20work/assignments/Portfolio/resume.html" target="_blank">
+                <img class="img-fluid port-image" src="./assets/imgs/resume.PNG" alt="awainindia2" width="350" height="350">
+                  </a>
+              </div>
             </div>
           </div>
           
