--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 
   <!-- Start of container -->
   <div class="container">
-    <main class="row">
+    <section class="row">
       <div class="col-md-8">
         <article class="block">
           <h1 class="block-header">Portfolio</h1>
@@ -88,7 +88,7 @@
           </div>
         </article>
       </div>
-    </main>
+    </section>
   </div>
   <!-- End of container -->
 
