--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge myBG" style="width:90%">90%</div>
           </div>
-          <p>Photography</p>
+          <p>SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge myBG" style="width:80%">
               <div class="w3-center">80%</div>
@@ -92,22 +92,22 @@
           </div>
           <p>Media</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge myBG" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge myBG" style="width:50%">70%</div>
           </div>
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right myColor"></i>Languages</b></p>
           <p>HTML5</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge myBG" style="height:24px;width:100%"></div>
+            <div class="w3-round-xlarge myBG" style="height:24px;width:90%"></div>
           </div>
           <p>CSS</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge myBG" style="height:24px;width:55%"></div>
+            <div class="w3-round-xlarge myBG" style="height:24px;width:90%"></div>
           </div>
           <p>Javascript</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge myBG" style="height:24px;width:25%"></div>
+            <div class="w3-round-xlarge myBG" style="height:24px;width:80%"></div>
           </div>
           <br>
         </div>
