--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <article class="block">
           <h1 class="block-header">About Olweny Awa Francis</h1>
           <hr />
-          <img class="img-fluid port-image isInline" src="./assets/imgs/SDC11932.JPG" alt="awainindia" width="300" height="300">
+          <img class="img-fluid port-image isInline" src="./assets/imgs/portimg.PNG" alt="awainindia" width="300" height="300">
           
           <p class="isInline">
-            I grew up in Tororo, Uganda, in a family of Readers. As junior Laboratory Technician my career took me to India in my early thirties. 
-            Olweny Francis Awa  is an IT  specialist with a decade of successful experience in developing websites and helping clients with computer issues.
-
+            Awa is an Institutional Counselor and IT specialist with a decade of successful experience in developing websites and helping private clients with computer/programming issues.
+            Has volunteered in private businesses guiding them in following project management principles guiding them in initiating, planning, executing, monitoring and controlling, and closing. Has also provided Project Management Consulting services for individuals and students for years now.
+            Awa also spends time in analyzing, designing and implementing information systems. He is a husband and father of three Boys.
             </p>  
           <br/>
           <p><h4>EDUCATION </h4></p>
