--- a/resume.html
+++ b/resume.html
@@ -123,9 +123,9 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge myColor"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Full Stack Developer/IT Project Manager/ Freelancer</b></h5>
-          <h6 class="myColor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag myBG w3-round">Current</span></h6>
+          <h6 class="myColor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec. 2012 - <span class="w3-tag myBG w3-round">Current</span></h6>
           <p>SUMMARY
-            A Full Stack Developer with 5 years of experience in HTML5, CSS,JQUERY,AJAX,JSON, Python,Javascript, etc. Received Award and Best Worker and Team member the month 2015 while working at Cascade Park Gardens </p>
+            A Full Stack Developer with 8 years of experience in HTML5, CSS,JQUERY,AJAX,JSON, Python,Javascript, etc. Recieved multiple certificates from Sololearn,Programming Hub and Udemy </p>
           <hr>
         </div>
       </div>
