updated pictures,and Resume links

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,12 +62,12 @@
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
               <a href="https://francisawa.github.io/weather-Dashboard/" target="_blank">
-                <img class="img-fluid port-image" src="./assets/imgs/awacode.PNG" alt="india3" width="350" height="350">
+                <img class="img-fluid port-image" src="./assets/imgs/portpolio1 (2).jpg" alt="india3" width="350" height="350">
               </a>
               </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
               <a href="https://lincguo93.github.io/Moodvie/" target="_blank">
-              <img class="img-fluid port-image" src="./assets/imgs/tecoders.PNG" alt="india" width="350" height="350">
+              <img class="img-fluid port-image" src="./assets/imgs/portpolio5.jpg" alt="portpolio5" width="350" height="350">
             </a>
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
@@ -77,7 +77,7 @@
             </div>
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <a href="file:///C:/BCS/course%20work/assignments/Portfolio/resume.html" target="_blank">
-                <img class="img-fluid port-image" src="./assets/imgs/resume.PNG" alt="awainindia2" width="350" height="350">
+                <img class="img-fluid port-image" src="./assets/imgs/portpolio4.jpg" alt="awainindia2" width="350" height="350">
                   </a>
               </div>
             </div>
