--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <article class="block">
           <h1 class="block-header">About Olweny Awa Francis</h1>
           <hr />
-          <img class="img-fluid port-image isInline" src="./assets/imgs/portimg.PNG" alt="awainindia" width="300" height="300">
+          <img class="img-fluid port-image isInline" src="./assets/imgs/portpolio3.jpg" alt="portpolio3" width="300" height="300">
           
           <p class="isInline">
             Awa is an Institutional Counselor and IT specialist with a decade of successful experience in developing websites and helping private clients with computer/programming issues.
