--- a/resume.html
+++ b/resume.html
@@ -167,7 +167,7 @@
   
   <!-- End Page Container -->
 </div>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <footer class="w3-container myBG w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <!-- <a href="#" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
